lib/linux-amd64/libphantom_wg.h

/* Code generated by cmd/cgo; DO NOT EDIT. */

/* package wireguard-go-bridge */


#line 1 "cgo-builtin-export-prolog"

#include <stddef.h>

#ifndef GO_CGO_EXPORT_PROLOGUE_H
#define GO_CGO_EXPORT_PROLOGUE_H

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef struct { const char *p; ptrdiff_t n; } _GoString_;
extern size_t _GoStringLen(_GoString_ s);
extern const char *_GoStringPtr(_GoString_ s);
#endif

#endif

/* Start of preamble from import "C" comments.  */


#line 3 "bridge_allowedips.go"

#include "phantom_wg.h"

#line 1 "cgo-generated-wrapper"

#line 3 "bridge_cookie.go"

#include "phantom_wg.h"

#line 1 "cgo-generated-wrapper"

#line 3 "bridge_crypto.go"

#include "phantom_wg.h"

#line 1 "cgo-generated-wrapper"

#line 3 "bridge_device.go"

#include "phantom_wg.h"

#line 1 "cgo-generated-wrapper"

#line 3 "bridge_keys.go"

#include "phantom_wg.h"

#line 1 "cgo-generated-wrapper"

#line 3 "bridge_logger.go"

#include "phantom_wg.h"

#line 1 "cgo-generated-wrapper"

#line 3 "bridge_misc.go"

#include "phantom_wg.h"

#line 1 "cgo-generated-wrapper"

#line 3 "bridge_peer.go"

#include "phantom_wg.h"

#line 1 "cgo-generated-wrapper"


/* End of preamble from import "C" comments.  */


/* Start of boilerplate cgo prologue.  */
#line 1 "cgo-gcc-export-header-prolog"

#ifndef GO_CGO_PROLOGUE_H
#define GO_CGO_PROLOGUE_H

typedef signed char GoInt8;
typedef unsigned char GoUint8;
typedef short GoInt16;
typedef unsigned short GoUint16;
typedef int GoInt32;
typedef unsigned int GoUint32;
typedef long long GoInt64;
typedef unsigned long long GoUint64;
typedef GoInt64 GoInt;
typedef GoUint64 GoUint;
typedef size_t GoUintptr;
typedef float GoFloat32;
typedef double GoFloat64;
#ifdef _MSC_VER
#if !defined(__cplusplus) || _MSVC_LANG <= 201402L
#include <complex.h>
typedef _Fcomplex GoComplex64;
typedef _Dcomplex GoComplex128;
#else
#include <complex>
typedef std::complex<float> GoComplex64;
typedef std::complex<double> GoComplex128;
#endif
#else
typedef float _Complex GoComplex64;
typedef double _Complex GoComplex128;
#endif

/*
  static assertion to make sure the file is being used on architecture
  at least with matching size of GoInt.
*/
typedef char _check_for_64_bit_pointer_matching_GoInt[sizeof(void*)==64/8 ? 1:-1];

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef _GoString_ GoString;
#endif
typedef void *GoMap;
typedef void *GoChan;
typedef struct { void *t; void *v; } GoInterface;
typedef struct { void *data; GoInt len; GoInt cap; } GoSlice;

#endif

/* End of boilerplate cgo prologue.  */

#ifdef __cplusplus
extern "C" {
#endif

extern int32_t wgAllowedIpsInsert(int64_t deviceHandle, char* peerPubKeyHex, char* prefixStr);
extern int32_t wgAllowedIpsReplaceForPeer(int64_t deviceHandle, char* peerPubKeyHex, char* prefixes);
extern int32_t wgAllowedIpsRemoveByPeer(int64_t deviceHandle, char* peerPubKeyHex);

// wgAllowedIpsGetForPeer returns allowed IPs for a peer via IpcGet parsing.
// Returns newline-separated CIDR prefixes. Caller must free with wgFreeString.
//
extern char* wgAllowedIpsGetForPeer(int64_t deviceHandle, char* peerPubKeyHex);
extern int64_t wgCookieCheckerCreate(void);
extern int32_t wgCookieCheckerInit(int64_t handle, char* pubKeyHex);
extern _Bool wgCookieCheckerCheckMac1(int64_t handle, void* msg, int msgLen);
extern _Bool wgCookieCheckerCheckMac2(int64_t handle, void* msg, int msgLen, void* src, int srcLen);
extern int32_t wgCookieCheckerCreateReply(int64_t handle, void* msg, int msgLen, uint32_t recv, void* src, int srcLen, void* out, int* outLen);
extern void wgCookieCheckerFree(int64_t handle);
extern int64_t wgCookieGeneratorCreate(void);
extern int32_t wgCookieGeneratorInit(int64_t handle, char* pubKeyHex);
extern int32_t wgCookieGeneratorAddMacs(int64_t handle, void* msg, int msgLen);
extern _Bool wgCookieGeneratorConsumeReply(int64_t handle, void* msg, int msgLen);
extern void wgCookieGeneratorFree(int64_t handle);
extern void wgHmac1(void* key, int keyLen, void* in0, int in0Len, void* out);
extern void wgHmac2(void* key, int keyLen, void* in0, int in0Len, void* in1, int in1Len, void* out);
extern void wgKdf1(void* key, int keyLen, void* input, int inputLen, void* t0);
extern void wgKdf2(void* key, int keyLen, void* input, int inputLen, void* t0, void* t1);
extern void wgKdf3(void* key, int keyLen, void* input, int inputLen, void* t0, void* t1, void* t2);
extern int wgBlake2sSize(void);
extern int64_t wgDeviceCreate(char* ifname, int mtu, int64_t loggerHandle);
extern int32_t wgDeviceClose(int64_t handle);
extern int32_t wgDeviceUp(int64_t handle);
extern int32_t wgDeviceDown(int64_t handle);
extern int32_t wgDeviceIpcSet(int64_t handle, char* config);
extern char* wgDeviceIpcGet(int64_t handle);
extern int64_t wgDeviceIpcSetOperation(int64_t handle, char* config);
extern int32_t wgDeviceBindClose(int64_t handle);
extern int32_t wgDeviceBindUpdate(int64_t handle);
extern int32_t wgDeviceBindSetMark(int64_t handle, uint32_t mark);
extern int64_t wgDeviceBind(int64_t handle);
extern int wgDeviceBatchSize(int64_t handle);
extern _Bool wgDeviceIsUnderLoad(int64_t handle);
extern int32_t wgDeviceWait(int64_t handle);
extern int32_t wgDeviceSetPrivateKey(int64_t handle, char* hexKey);
extern int64_t wgDeviceNewPeer(int64_t handle, char* pubKeyHex);
extern int64_t wgDeviceLookupPeer(int64_t handle, char* pubKeyHex);
extern int32_t wgDeviceRemovePeer(int64_t handle, char* pubKeyHex);
extern int32_t wgDeviceRemoveAllPeers(int64_t handle);
extern int32_t wgDevicePopulatePools(int64_t handle);
extern int32_t wgDeviceDisableRoaming(int64_t handle);
extern int32_t wgDeviceSendKeepalivesToPeers(int64_t handle);
extern void wgFreeString(char* s);
extern char* wgGeneratePrivateKey(void);
extern char* wgDerivePublicKey(char* privateKeyHex);
extern char* wgGeneratePresharedKey(void);
extern int32_t wgPrivateKeyFromHex(char* hexStr, void* out);
extern int32_t wgPrivateKeyFromMaybeZeroHex(char* hexStr, void* out);
extern _Bool wgPrivateKeyIsZero(char* keyHex);
extern _Bool wgPrivateKeyEquals(char* keyAHex, char* keyBHex);
extern int32_t wgPublicKeyFromHex(char* hexStr, void* out);
extern _Bool wgPublicKeyIsZero(char* keyHex);
extern _Bool wgPublicKeyEquals(char* keyAHex, char* keyBHex);
extern int32_t wgPresharedKeyFromHex(char* hexStr, void* out);
extern void wgSetLogCallback(WgLogCallback callback, void* context);
extern int64_t wgNewLogger(int level, char* prepend);
extern void wgLoggerFree(int64_t handle);
extern void wgDiscardLogf(void);
extern int64_t wgIpcErrorCode(int64_t errCode);
extern char* wgBridgeVersion(void);
extern char* wgWireguardGoVersion(void);
extern int wgActiveDeviceCount(void);
extern int wgActivePeerCount(void);
extern int32_t wgPeerStart(int64_t handle);
extern int32_t wgPeerStop(int64_t handle);
extern char* wgPeerString(int64_t handle);
extern void wgPeerFree(int64_t handle);
extern int32_t wgPeerSendHandshakeInitiation(int64_t handle, _Bool isRetry);
extern int32_t wgPeerSendHandshakeResponse(int64_t handle);
extern int32_t wgPeerBeginSymmetricSession(int64_t handle);
extern int32_t wgPeerSendKeepalive(int64_t handle);
extern int32_t wgPeerSendStagedPackets(int64_t handle);
extern int32_t wgPeerExpireCurrentKeypairs(int64_t handle);
extern int32_t wgPeerFlushStagedPackets(int64_t handle);
extern int32_t wgPeerZeroAndFlushAll(int64_t handle);

#ifdef __cplusplus
}
#endif